8048190: NoClassDefFoundError omits original ExceptionInInitializerError